--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,18 +2,18 @@ version: 2.1
 jobs:
   build-and-test:
     docker:
-      - image: cimg/openjdk:8.0.302
+      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - run:
           name: Build
-          command: mvn -B -DskipTests clean package
+          command: mvn -B -DskipTests=false clean package
       - run:
           name: Test
           command: mvn test
       - run:
           name: Analyze on SonarCloud
-          command: mvn sonar:sonar -Dsonar.projectKey=$PROJECT_KEY -Dsonar.organization=<naziv_organizacije> -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+          command: mvn sonar:sonar -Dsonar.projectKey=$PROJECT_KEY -Dsonar.organization=gajicmladen -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.login=$SONAR_TOKEN
 
 orbs:
   heroku: circleci/heroku@1.2.6
